* Fixed: Partner Logos slider stretching images 100% width of column.
* Fixed: PHP warning on 404 pages, when going to incorrect author URL.
* Fixed: Default theme options "Read More" text not getting applied to post list and post grid elements.
* Fixed: Minor issues with Hero Unit Slider element spacing and height calculation.
* Fixed: [WPML](http://themeblvd.com/links/wpml) switcher was producing "undefined" error in mobile menu on pages that only had one language.
* Fixed: More minor RTL and Translation bug fixes.
    * Frontend post grid/showcase filtering and masonry now aligns correctly to the right.
    * Tabs and pills of Tabs element now align properly to right.
    * Panels no longer force text to be aligned left.
    * Pricing table columns now display in correct order, from right-to-left.
    * Progress bars now display and animate out from right.
    * "Custom CSS" option code editor on theme options page now works with RTL.
* **Important:** Theme's registered text domain for localization was changed from `themeblvd` to `jumpstart` to meet wordpress.org localization standards.
* **Important:** Banner functionality has been removed, in favor of new featured image options. You can restore functionality with [Jump Start Banners](http://wordpress.org/plugins/jumpstart-banners) plugin.

--------------------------------------------------------------

2.0.4 - 12/11/2015
------------------

* Improvement: Some frontend RTL fixes and improvements.
* Improvement: Admin RTL fixes and improvements.
* Improvement: Frontend post grid/showcase filtering now also effects navigating items in corresponding lightbox gallery.
* Improvement: Minor comment form styling adjustments for changes in WordPress 4.4+.
* Improvement: Now using `srcset` for HiDPI/Retina logo with no javascript, to match practices of WordPress 4.4+.
* Fixed: Dropdown menus not displaying when adding a parallax background image or video background to site header from theme options.